force-app/main/default/objects/MDMRegRequestResult__c/MDMRegRequestResult__c.object-meta.xml
<CustomObject>
    <label>MDM 고객 등록 요청 결재 현황</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>MDMRegRequestResult Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>