force-app/main/default/objects/MDMRegRequestResult__c/fields/PV_CRMNO__c.field-meta.xml
<CustomField>
    <fullName>PV_CRMNO__c</fullName>
    <externalId>true</externalId>
    <label>PV_CRMNO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>