force-app/main/default/objects/MDMRegRequestResult__c/fields/WF_ACTOR__c.field-meta.xml
<CustomField>
    <fullName>WF_ACTOR__c</fullName>
    <label>WF_ACTOR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>