force-app/main/default/objects/MDMRegRequestResult__c/fields/WF_DATE__c.field-meta.xml
<CustomField>
    <fullName>WF_DATE__c</fullName>
    <label>WF_DATE</label>
    <type>DateTime</type>
</CustomField>