force-app/main/default/objects/MDMRegRequestResult__c/fields/WF_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>WF_DESCRIPTION__c</fullName>
    <label>WF_DESCRIPTION</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>