force-app/main/default/objects/MDMRegRequestResult__c/fields/WF_INSTANCEID__c.field-meta.xml
<CustomField>
    <fullName>WF_INSTANCEID__c</fullName>
    <label>WF_INSTANCEID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>