force-app/main/default/objects/MDMRegRequestResult__c/fields/WF_NEXTACTOR__c.field-meta.xml
<CustomField>
    <fullName>WF_NEXTACTOR__c</fullName>
    <label>WF_NEXTACTOR</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>