force-app/main/default/objects/MDMRegRequestResult__c/fields/WF_STATUS__c.field-meta.xml
<CustomField>
    <fullName>WF_STATUS__c</fullName>
    <label>WF_STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>REQ</fullName>
                <default>true</default>
                <label>요청</label>
            </value>
            <value>
                <fullName>PROC</fullName>
                <label>검토</label>
            </value>
            <value>
                <fullName>APPR</fullName>
                <label>승인</label>
            </value>
            <value>
                <fullName>RJCT</fullName>
                <label>반려</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>